# agora

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  AGENTS.md  AGENTS_TRANSLATION_NOTES.md  AUTHORS  CLAUDE.md  CONTRIBUTING.md  COPYING-README.md  COUNTER_STRATEGY.md  DB_POOL_ANALYSIS.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  SECURITY.md  WHY_FEWER_CONNECTIONS_IS_BETTER.md  agora.code-workspace  docker-compose.local.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  project-admin-data-spec.csv  project-admin-schema-final-v3.csv  project-admin-schema-proposal-v2.csv  run_all_in_gnome_terminal_tabs.sh  run_all_in_kitty_tabs.sh
services/ai-description-retry-worker/: Dockerfile  Makefile  README.md  env.example  pyproject.toml
services/ai-description-retry-worker/scenarios/: env.simulated-non-retryable  env.simulated-retry-always  env.simulated-retry-then-success  env.simulated-success
services/ai-description-retry-worker/src/ai_description_retry_worker/: worker.py
services/content-translation-worker/: Dockerfile  Makefile  README.md  pyproject.toml
services/content-translation-worker/scenarios/: env.simulated-non-retryable  env.simulated-retry-always  env.simulated-retry-then-success  env.simulated-success
services/content-translation-worker/src/content_translation_worker/: __init__.py  config.py  db.py  events.py  generated_models.py  simulated_translation.py  translation.py  translation_model.py  translation_service.py  valkey_client.py  worker.py
services/content-translation-worker/tests/: test_config.py  test_db_claim_query.py  test_events.py  test_html_sanitization.py  test_lease_ids.py  test_opinion_revision.py  test_simulated_translation.py  test_source_metadata.py  test_translation.py
services/description-translation-retry-worker/: Dockerfile  Makefile  README.md  env.example  pyproject.toml
services/description-translation-retry-worker/scenarios/: env.simulated-non-retryable  env.simulated-retry-always  env.simulated-retry-then-success  env.simulated-success
services/description-translation-retry-worker/src/description_translation_retry_worker/: worker.py
services/import-worker/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml
services/import-worker/src/import_worker/: __init__.py  __main__.py  config.py  csv_import.py  database.py  generated_import_contracts.py  generated_models.py  generated_shared_types.py  google_language_detection.py  html.py  ids.py  import_models.py  importer.py  language_detection.py  polis_url.py  queue.py  worker.py
services/import-worker/tests/: test_config.py  test_content_translation_languages.py  test_csv_import.py  test_database.py  test_generated_models.py  test_language_detection.py  test_queue.py
services/math-updater/: .dockerignore  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  env.example  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace-docker.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsconfig.spec.json  tsconfig.test.json
services/math-updater/scenarios/: env.simulated-non-retryable  env.simulated-retry-always  env.simulated-retry-then-success  env.simulated-success
services/math-updater/src/: app.ts  config.ts  conversationCounters.ts  index.ts  logger.ts
services/math-updater/src/jobs/: scanConversations.ts  updateConversationMath.ts
services/math-updater/src/math_updater/: __init__.py  __main__.py  ai_description_work.py  ai_description_worker.py  analysis_compute.py  bedrock_label_summary.py  config.py  db.py  description_input.py  description_retry_processor.py  description_services.py  description_translation.py  description_translation_worker.py  generated_models.py  lineage_matching.py  logging_utils.py  retry_policy.py  simulation_providers.py  survey_aggregates.py  valkey_client.py  work_state.py  worker.py
services/math-updater/src/services/: commentHelper.ts  llmService.ts  polisHelpers.ts  polisMathUpdater.ts  translationService.ts
services/math-updater/src/shared/: shared.ts
services/math-updater/src/shared-backend/: clusterTranslation.ts  config.ts  conversationCounters.ts  db.ts  googleCloudAuth.ts  llmSchemas.ts  logger.ts  redis.ts  schema.ts  surveyAnalysis.ts  surveyTranslation.ts  translate.ts  valkey.ts  valkeyQueues.ts
services/math-updater/src/utils/: bedrockMessage.spec.ts  bedrockMessage.ts  llmParse.test.ts  llmParse.ts  llmSchemaParse.test.ts  llmSchemaParse.ts
services/math-updater/tests/: test_ai_description_work.py  test_analysis_compute.py  test_bedrock_label_summary.py  test_config.py  test_description_input.py  test_description_translation.py  test_input_snapshot.py  test_lineage_matching.py  test_premium_analysis.py  test_simulation_providers.py  test_survey_aggregates.py  test_work_state.py  test_worker.py
services/python-bridge/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bws_conversion.py  cocm_voting.py  entity_mapping.py  gunicorn.conf.py  main.py  pyproject.toml  test_bws_conversion.py  test_cache.sqlite  test_cocm_voting.py  test_entity_mapping.py  test_maxdiff_score.py  test_ranking_score.py  test_scaling.py
services/scoring-worker/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
services/scoring-worker/src/scoring_worker/: __main__.py  bws_conversion.py  cocm_voting.py  config.py  db.py  entity_mapping.py  generated_models.py  maxdiff_sequential.py  observations.py  scoring.py  (+3 more)
services/scoring-worker/tests/: conftest.py  test_bws_conversion.py  test_cocm_voting.py  test_config.py  test_entity_mapping.py  test_maxdiff_sequential.py  test_observations.py  test_pipeline_config.py  test_scoring.py  test_survey_analysis.py  test_valkey_scripts.py
services/shared-analysis-worker/: README.md  pyproject.toml
services/shared-analysis-worker/tests/: test_ai_description_work.py  test_analysis_compute.py  test_bedrock_label_summary.py  test_config.py  test_description_translation.py  test_input_snapshot.py  test_postgres_engine.py  test_schema_readiness.py  test_simulation_providers.py  test_survey_aggregates.py
(+2875 files in other folders)
