[project]
name = "agora-ai-description-retry-worker"
version = "0.1.0"
description = "AI-description retry/backlog worker"
requires-python = ">=3.13"
dependencies = [
    "agora-worker-shared",
]

[tool.uv]
required-version = ">=0.11.6"
exclude-newer = "5 days"

[tool.uv.sources]
agora-worker-shared = { path = "../python-worker-shared", editable = true }

[project.optional-dependencies]
dev = [
    "basedpyright>=1.29",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_description_retry_worker"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
