[project]
name = "agora-content-translation-worker"
version = "0.1.0"
description = "Dynamic user-content translation worker"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.2",
    "google-cloud-translate>=3.20",
    "opencc>=1.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "sqlalchemy[postgresql-psycopg]>=2.0",
    "valkey>=6.0",
]

[tool.uv]
required-version = ">=0.11.6"
exclude-newer = "5 days"

[project.optional-dependencies]
dev = [
    "basedpyright>=1.29",
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_translation_worker"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"src/content_translation_worker/generated_models.py" = ["TCH003"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
