[project]
name = "agora-math-updater"
version = "0.1.0"
description = "Python opinion-groups analysis worker"
requires-python = ">=3.13"
dependencies = [
    "agora-analysis-worker-shared",
]

[tool.uv]
required-version = ">=0.11.6"
exclude-newer = "5 days"

[tool.uv.sources]
agora-analysis-worker-shared = { path = "../analysis-worker-shared", editable = true }

[project.optional-dependencies]
dev = [
    "basedpyright>=1.29",
    "botocore-stubs>=1.42",
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/math_updater"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
