[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-python-bridge"
version = "1.1.0"
description = "Used by Agora backend for integration for data science libraries written in Python"
authors = [
	{ name = "Nicolas Gimenez", email = "46368291+nicobao@users.noreply.github.com" },
]
readme = "README.md"
license = { text = " MPL-2.0" }
requires-python = ">=3.13"

dependencies = [
	# Web framework + WSGI server
	"Flask>=3.1,<4",
	"gunicorn>=23,<26",
	"pydantic>=2.12,<3",

	# Polis clustering (red-dwarf)
	# Fork with consensus-jeffreys-prior fix (commit 3665b41)
	"red-dwarf @ git+https://github.com/nicobao/red-dwarf.git@3665b419f1ddbd66ec276f72c90a3856666bf845",
	"scikit-learn>=1.7,<2",
	"pandas>=2.3,<3",

	# Solidago scoring (from Tournesol project)
	# Generalized Bradley-Terry, per-user models, aggregation pipeline
	# https://pypi.org/project/solidago/
	"solidago[torch]==0.5.0",
]

[tool.setuptools]
py-modules = ["main", "bws_conversion", "entity_mapping"]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
